--- a/laboratoir/package.json
+++ b/laboratoir/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@formspree/react": "^2.5.1",
+    "bootstrap": "^5.3.2",
     "docxtemplater": "^3.43.0",
     "email-validator": "^2.0.4",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-router": "^6.21.1",
